--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <body class="">
         <h1>Hi from Express</h1>
+        
+        <!-- Make sure the image is in the folder and add the relative path, as the live server will not detect an of the images outside the folder of the project -->
+        <img src="ss.png" alt="">
     </body>
 
 </html>
